2005-05-20  Francois Dumont  <dums@stlport...>

	* build/test/eh: Patch from Michael Fink to add EVC4 support for this test
	suite.

	* src/fstream.cpp: Use of Wlodek Szafran implementation for the _Filebuf_base::_M_read
	method which is more performant than the previous one.

	* test/unit/fstream_test.cpp: Add of a test for the special Win32 file format.

	* test/unit: Add of many test to check Standard C/C++ headers independancy
	and correct C header implementation.
	
2005-05-18  Francois Dumont  <dums@stlport...>

	* src/fstream.cpp: Fix buffer overflow in _Filebuf_base::_M_read method
	for the Win32 platform implementation thanks Wlodek Szafran report.

	* src/c_locale_dummy/c_locale_dummy.c: Patch from Michael Fink for wrong C
	prototype.

2005-05-17  Petr Ovtchenkov  <ptr@island...>

	* test/unit/locale_test.cpp: some fixes in moneypunct test, related
	to international currency format; some problems still remains, due to
	unclear specifications---if international currency 3-chars abbreviation
	used in suffix form, additional space will be appended
	['1 234.56 RUR ']. This is due to intl_fmp.curr_symbol() == "RUR ",
	and the last is conform to OpenGroup spec.

2005-05-16  Petr Ovtchenkov  <ptr@island...>

	* src/c_locale_stub.cpp: "stub" implemntation moved into
	c_locale_dummy/c_locale_dummy.c, this file removed

	* src/c_locale.c: include c_locale_dummy/c_locale_dummy.c, in case of
	no real locale implementation.

	* src/c_locale_dummy/c_locale_dummy.c: This is a "stub" implementation
	of the "c_locale.h" interface, intended for operating systems where
	we have not yet written a real implementation. A C++ library using
	this stub implementation is still standard-conforming, since
	the C++ standard does not require that any locales other
	than "C" be supported.

	* build/lib/Makefile.inc: src/c_locale_stub.cpp removed.

	* src/facets_by_name.cpp: add comments in the _Init_monetary_formats.
